<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_lightgreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/container_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp240"
                android:layout_marginBottom="@dimen/dp10"
                android:background="@color/colorAccent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_login_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp10"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp60"
                    android:clipToPadding="false"
                    android:gravity="bottom">

                    <EditText
                        android:id="@+id/et_mobilenumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/dark_gray_background"
                        android:drawablePadding="@dimen/dp10"
                        android:hint="@string/hint_mobile_number"
                        android:imeOptions="actionDone|flagForceAscii"
                        android:importantForAutofill="noExcludeDescendants"
                        android:inputType="number"
                        android:lineSpacingMultiplier="1.2"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="@dimen/sp15"
                        android:typeface="sans" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_mobilevalidation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/sp12"
                    android:typeface="sans"
                    android:visibility="gone" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10">

                <CheckBox
                    android:id="@+id/cb_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp5"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/cb_terms"
                    android:paddingEnd="@dimen/dp5"
                    android:paddingStart="@dimen/dp10"
                    android:text="@string/agree_terms"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/colorPrimaryButton"
                    android:textSize="@dimen/sp12"
                    android:typeface="sans" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnRequestOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_ripple_effect_drawable"
        android:text="@string/request_otp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp18"
        android:typeface="sans" />

</RelativeLayout>